membuat mini chalangge web dev

--- a/home.html
+++ b/home.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta>
-	<title></title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<h1>lab programing SEAL</h1>
+    <h2>Rifki Pebriansah Sulaeman</h2>
+    <p>
+        <img src="Rifki.jpg" alt="" title="Rifki Pebriansah Sulaeman" width="300px">
+    </p>
+    <br>
+    <h2>Tentang Saya</h2>
+    <p>
+        Assalamualaikum nama saya Rifki Pebriansah Sulaeman seorang mahasiswa dari
+    </p>
+    <p>
+        Universitas Jenderal Achmad Yani dan saya juga dari jurusan Informatika.
+    </p>
+    <h2>
+        Keahlian Saya
+    </h2>
+    <ol>
+        <li>
+            UI Design
+        </li>
+        <li>
+            UX Wireframe
+        </li>
+        <li>
+            Front End
+        </li>
+    </ol>
+    <h2>
+        Pendidikan Saya
+    </h2>
+    <ul>
+        <li>
+            2007 - 2013 SDN 8 Kesiman Denpasar
+        </li>
+        <li>
+            2013 – 2014 SMP Saraswati 1 Denpasar
+        </li>
+        <li>
+            2014 – 2016 SMP Kartika XIX-3 Cimahi
+        </li>
+        <li>
+            2016 - 2019 SMK TI GARUDA NUSANTARA CIMAHI
+        </li>
+    </ul>
+    <h2>
+        Kontak Saya
+    </h2>
+    <a href="">Instagram</a>
 </body>
 </html>
-<
