menambahkan link IG saya

--- a/home.html
+++ b/home.html
@@ -53,6 +53,6 @@
     <h2>
         Kontak Saya
     </h2>
-    <a href="">Instagram</a>
+    <a href="https://www.instagram.com/rifkiarts/">Instagram</a>
 </body>
 </html>
