--- a/home.html
+++ b/home.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>
+        Praktikum Web SEAL
+    </h1>
     <h2>Rifki Pebriansah Sulaeman</h2>
     <p>
         <img src="Rifki.jpg" alt="" title="Rifki Pebriansah Sulaeman" width="300px">
